# age_gender_classifier

./: .env.sample  .gitignore  README.md  entrypoint.sh  image_preprocessing.py  model.py  preprocess_and_clean.py  pyproject.toml  spin-up-local-db.sh
input_data/: README.md  formatter.py
src/age_gender_classifier_ensemble_test/: format_data.py  model.py  model2.py  pivoted_output.csv  temp_output_labeled.csv
src/eval/: README.md  analyze_labeled_data_raw.py  analyze_labeled_data_scored.py  eval_main.py  evaluate_inputs.py  inspect_inputs.py  score_labeled_data.py  transform_scores.py
src/init_data/: README.md  load_db.py
src/input_data/: README.md  load_db.py
src/models/: Age_Classify_v001.py  vit-age-classifier.py
src/onnx_models/: convert_to_onnx.py  survey_models.py
src/onnx_models/age_classify_v001/: convert_to_onnx.py  model.py
src/onnx_models/fairface/: convert_to_onnx.py  model.py
src/onnx_models/vit_age_classifier/: convert_to_onnx.py  model.py
src/server/: server-onnx.py
src/utils/: common.py  preprocess.py  sqlAlchemy_manager.py
