[project]
name = "age-gender-classifier"
version = "0.1.0"
description = "UMass Rescue Box: Age and Gender Classification"
authors = [
    {name = "James Bardowski",email = "jbardowski@umass.edu"},
    {name = "Juhi Manish Jain",email = "juhimanishja@umass.edu"},
    {name = "Jacob Sweet",email = "jdsweet@umass.edu"}
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [
    { include = "server", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
ipython = "^8.32.0"
ipykernel = "^6.29.5"

